smb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smb
  labels:
    app: smb
spec:
  selector:
    app: smb
  ports:
    - port: 445
      protocol: TCP
      targetPort: 445
      name: smb
