smb/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: smb
  namespace: tsebra-home
spec:
  entryPoints:
    - smb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: smb
          port: 445
